docs/refactor: api docs extended with product creation and some refactror on product controller
