# src/main/java/com/greenfoxacademy/ebayclone/controllers/ProductController.java
@@ -12,12 +12,14 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 
 @RestController
+@RequestMapping("/products")
 public class ProductController {
 
     private final ProductManagementService productManagementService;
@@ -26,7 +28,7 @@ public class ProductController {
         this.productManagementService = productManagementService;
     }
 
-    @PostMapping("/products/create")
+    @PostMapping("/create")
     public ResponseEntity<ProductDetailsDTO> createNewProduct(
             @Valid @RequestBody ProductCreationDTO productCreationDTO,
             BindingResult bindingResult,
@@ -38,14 +40,14 @@ public class ProductController {
         );
     }
 
-    @GetMapping("/products")
+    @GetMapping({"/", ""})
     public ResponseEntity<List<ProductDetailsDTO>> listAllProducts(
             @RequestParam(required = false) String page
     ) {
         return ResponseEntity.ok(this.productManagementService.listAllProducts(page));
     }
 
-    @GetMapping("/products/{id}")
+    @GetMapping("/{id}")
     public ResponseEntity<ProductDetailsDTO> getSpecificProductById(
             @PathVariable String id
     ) throws ProductNotFoundException {
